--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,18 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+
+    ext {
+        hilt_version = '2.44'
+        coroutines_version = '1.4.1'
+        retrofit_version = '2.9.0'
+        http_version = '4.9.0'
+        gson_version = '2.8.6'
+        lifecycle_version = '2.4.1'
+
+    }
+}
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
