--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         http_version = '4.9.0'
         gson_version = '2.8.6'
         lifecycle_version = '2.4.1'
+        navigation_version = '2.5.3'
 
     }
 }
