--- a/features/articles/build.gradle
+++ b/features/articles/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     // Kotlin components
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    implementation "com.google.code.gson:gson:$gson_version"
 }
